--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ form input
 {
      border: 2px solid #eee;
      padding: 10px;
-     width: 90%;
+     width: 87%;
 
      &:focus
      {
@@ -40,11 +40,27 @@ form input
 }
 form button
 {
-     width: calc(10% - 3px);
+     width: calc(13% - 3px);
      background: #89aeed;
      border: none;
-     padding: 11px;
+     color: white;
+     text-transform: uppercase;
+     text-align: center;
+     padding: 12px;
      margin-right: 3px;
+     -webkit-transition: all 0.3s ease-in-out;
+     cursor: pointer;
+
+     &:hover
+     {
+        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+     }
+     &:focus
+     {
+         outline: none;
+     }
 }
 #messages
 {
