--- a/css/style.scss
+++ b/css/style.scss
@@ -18,62 +18,119 @@ display: block;
  border: 2px solid #eee;
 
 }
-form
+.messages-body
 {
-    padding: 3px;
+
+
+    form
+    {
+        padding: 3px;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        margin: 0 auto;
+        display: block;
+        display: none;
+    }
+    form input
+    {
+         border: 2px solid #eee;
+         padding: 10px;
+         width: 87%;
+
+         &:focus
+         {
+             outline: none;
+         }
+    }
+    form button
+    {
+         width: calc(13% - 3px);
+         background: #89aeed;
+         border: none;
+         color: white;
+         text-transform: uppercase;
+         text-align: center;
+         padding: 12px;
+         margin-right: 3px;
+         -webkit-transition: all 0.3s ease-in-out;
+         cursor: pointer;
+
+         &:hover
+         {
+            -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+            -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+            box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+         }
+         &:focus
+         {
+             outline: none;
+         }
+    }
+
+    .message
+    {
+        position: relative;
+        width: 100%;
+        padding: 10px;
+
+
+        &.to
+        {
+            background-color: #89aeed;
+            color: white;
+        }
+        &.from
+        {
+            background-color: #eee;
+        }
+    }
+}
+
+#user-create
+{
+    width: 500px;
     position: absolute;
-    bottom: 0;
-    width: inherit;
-    margin: 0 auto;
+    height: 500px;
+    top:200px;
+    margin: 0 auto; left: 0;right: 0;
     display: block;
-}
-form input
-{
-     border: 2px solid #eee;
-     padding: 10px;
-     width: 87%;
+    border: 2px solid #eee;
 
-     &:focus
-     {
-         outline: none;
-     }
-}
-form button
-{
-     width: calc(13% - 3px);
-     background: #89aeed;
-     border: none;
-     color: white;
-     text-transform: uppercase;
-     text-align: center;
-     padding: 12px;
-     margin-right: 3px;
-     -webkit-transition: all 0.3s ease-in-out;
-     cursor: pointer;
+    input
+    {
+        border: 2px solid #eee;
+        padding: 10px;
+        width: 87%;
 
-     &:hover
-     {
-        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
-        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
-     }
-     &:focus
-     {
-         outline: none;
-     }
-}
-#messages
-{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+        &:focus
+        {
+            outline: none;
+        }
+    }
+    button
+    {
+         width: calc(13% - 3px);
+         background: #89aeed;
+         border: none;
+         color: white;
+         text-transform: uppercase;
+         text-align: center;
+         padding: 12px;
+         margin-right: 3px;
+         -webkit-transition: all 0.3s ease-in-out;
+         cursor: pointer;
 
-}
-#messages li
-{
-     padding: 5px 10px;
-}
-#messages li:nth-child(odd)
-{
-     background: #eee;
+         &:hover
+         {
+            -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+            -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+            box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.15);
+         }
+         &:focus
+         {
+             outline: none;
+         }
+    }
+
 }
