--- a/css/style.scss
+++ b/css/style.scss
@@ -1,26 +1,31 @@
 *
 {
-    margin: 0; padding: 0; box-sizing: border-box;
+    box-sizing: border-box;
 }
 body
 {
     font: 16px Helvetica, Arial;
+    margin: 0;
 }
 
-.app-wrap
+.messages-wrap
 {
     width: 500px;
     position: absolute;
     height: 500px;
     top:200px;
     margin: 0 auto; left: 0;right: 0;
-display: block;
- border: 2px solid #eee;
+    display: none;
+
 
 }
 .messages-body
 {
-
+    border: 2px solid #eee;
+    width: calc(100% - 12px);
+    margin: 0 auto;
+    height: 450px;
+    overflow-y: scroll;
 
     form
     {
@@ -29,8 +34,6 @@ display: block;
         bottom: 0;
         width: 100%;
         margin: 0 auto;
-        display: block;
-        display: none;
     }
     form input
     {
@@ -71,37 +74,52 @@ display: block;
     .message
     {
         position: relative;
-        width: 100%;
+        width: 60%;
         padding: 10px;
+        margin: 8px auto;
+        border-radius: 5px;
+        color: white;
 
 
         &.to
         {
-            background-color: #89aeed;
-            color: white;
+            float: right;
+            margin-right: 10px;
         }
         &.from
         {
-            background-color: #eee;
+            float: left;
+            margin-left: 10px;
         }
     }
 }
 
 #user-create
 {
-    width: 500px;
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
     position: absolute;
-    height: 500px;
-    top:200px;
     margin: 0 auto; left: 0;right: 0;
     display: block;
+    background-color: rgba(0, 0, 0, 0.6);
     border: 2px solid #eee;
+    color: white;
+    padding: 18%;
 
     input
     {
         border: 2px solid #eee;
+        display: block;
+        margin-top: 50px;
+        margin-bottom: 20px;
         padding: 10px;
-        width: 87%;
+        font-size: 25px;
+        width: 80%;
+        background-color: transparent;
+        color: white;
+        border: none;
+        border-bottom: 2px solid white;
 
         &:focus
         {
@@ -110,7 +128,7 @@ display: block;
     }
     button
     {
-         width: calc(13% - 3px);
+         width: calc(15% - 3px);
          background: #89aeed;
          border: none;
          color: white;
